--- a/package.json
+++ b/package.json
@@ -17,15 +17,13 @@
   },
   "homepage": "https://github.com/julio8a/myPortfolio#readme",
   "devDependencies": {
+    "grunt": "^1.5.3",
     "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-imagemin": "^3.1.0",
-    "grunt-contrib-uglify": "^3.3.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-sass": "^2.1.0"
-  },
-  "dependencies": {
-    "grunt": "^1.0.4",
-    "node-sass": "^4.13.1"
+    "grunt-contrib-connect": "^2.1.0",
+    "grunt-contrib-imagemin": "^4.0.0",
+    "grunt-contrib-uglify": "^5.0.1",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-shell": "^3.0.1",  
+    "sass": "^1.63.6" 
   }
 }
